--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
 .tmp/
 node_modules/
-dist/node_modules/
-dist/vendor/js/client.js
-dist/vendor/js/jquery.min.js
-dist/vendor/css/bootstrap.css
-dist/vendor/css/main.css
-dist/vendor/js/angular.min.js
-dist/vendor/js/app.js
 data.json
 *.mp3
-dist/data.json
+dist/
