--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
     "url": "https://github.com/cedced19/zikcenter-static/issues"
   },
   "homepage": "https://github.com/cedced19/zikcenter-static",
-  "devDependencies": {
+  "dependencies": {
     "gulp": "^3.8.10",
-    "gulp-autoprefixer": "^2.3.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.5.2",
-    "gulp-htmlmin": "^1.1.1",
-    "gulp-if": "^1.2.5",
+    "gulp-htmlmin": "^2.0.0",
+    "gulp-if": "^2.0.1",
     "gulp-minify-css": "^1.1.1",
     "gulp-uglify": "^1.2.0",
     "gulp-uncss": "^1.0.1",
-    "gulp-useref": "^1.1.2",
-    "gulp-util": "^3.0.2"
+    "gulp-useref": "^3.1.0",
+    "gulp-util": "^3.0.2",
+    "pump": "^1.0.1"
+  },
+  "scripts": {
+    "start": "node data-generator && gulp"
   },
   "author": {
     "name": "Cédric",
